--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Byte-compiled / optimized / DLL files
+﻿# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -147,8 +147,12 @@ dmypy.json
 
 # папки со статикой и медиа
 media/
+blogicum/static
 
 # Testing
 build_tests/
 yap_testing
 html/img/img/
+
+html/
+
